# rosemetal

./: Cargo.toml  LICENSE  README.md
crates/airlines/: Cargo.toml  README.md  result.spv
crates/airlines/src/: lib.rs
crates/airlines/src/air_builder/: mod.rs
crates/airlines/src/air_codegen/: mod.rs
crates/airlines/src/air_codegen/spirv/: mod.rs
crates/airlines/src/air_parser/: items.rs  mod.rs
crates/airlines/src/llvm_bitcode/: abbrev.rs  bitcodes.rs  bitcursor.rs  bitstream.rs  mod.rs  parser.rs  record.rs
crates/airlines/src/metal_lib/: mod.rs  reader.rs
crates/airlines/src/spirv_builder/: mod.rs
crates/airlines/src/spirv_codegen/air/: mod.rs
crates/airlines/src/spirv_parser/: items.rs  mod.rs
crates/airlines/test-files/: code.air  code.air.ll  code.metal  test.air  test.metallib
crates/rosemetal/: Cargo.toml
crates/rosemetal-build/: Cargo.toml
crates/rosemetal-build/src/: lib.rs
crates/rosemetal/src/: buffer.rs  command.rs  device.rs  drawable.rs  instance.rs  lib.rs  math.rs  render.rs  shader.rs  sync.rs
examples/hello/: Cargo.toml  Shaders.air  Shaders.metal  Shaders.metallib  build.rs
examples/hello/src/: main.rs
